# cmake-package

./: CMakeLists.txt  FindMyCppProject_LIB.cmake  README.md  build.bat  my_library-config.cmake
cmake/: FindMyCppProject_LIB.cmake  MyCppProjectConfig.cmake.in  MyCppProject_LIBConfig.cmake
